Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87002

error: ‘QSequentialIterable’ was not declared in this scope

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P0: Blocker
    • None
    • 6.0.0 Alpha
    • Qt3D
    • None

    Description

      agent:2020/09/28 05:27:48 build.go:379: src/render/materialsystem/qparameter.cpp: In member function ‘virtual void Qt3DRender::QParameterPrivate::setValue(const QVariant&)’:
      agent:2020/09/28 05:27:48 build.go:379: src/render/materialsystem/qparameter.cpp:200:9: error: ‘QSequentialIterable’ was not declared in this scope
      agent:2020/09/28 05:27:48 build.go:379:   200 |         QSequentialIterable iterable = v.value<QSequentialIterable>();
      agent:2020/09/28 05:27:48 build.go:379:       |         ^~~~~~~~~~~~~~~~~~~
      agent:2020/09/28 05:27:48 build.go:379: src/render/materialsystem/qparameter.cpp:202:26: error: ‘iterable’ was not declared in this scope; did you mean ‘QIterable’?
      agent:2020/09/28 05:27:48 build.go:379:   202 |         variants.reserve(iterable.size());
      agent:2020/09/28 05:27:48 build.go:379:       |                          ^~~~~~~~
      agent:2020/09/28 05:27:48 build.go:379:       |                          QIterable
      

      Build log: https://testresults.qt.io/logs/qt/qt3d/37d26aa8ea83f1e6dab9cd9d3af787b780000fc9/LinuxSLES_15x86_64LinuxSLES_15x86_64GCCqtci-linux-SLES-15-x86_64-470cfcDisableTests_Sccache/ee302914086e8717c6ca29e3d88848fb48e98c8d/build_1601270442/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qt3d/tasks/1601270087

      Tested changes (refs/builds/qtci/dev/1601270085):
      https://codereview.qt-project.org/c/qt/qt3d/+/314552/2 Update dependencies on 'dev' in qt/qt3d

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mkrus Mike Krus
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes