Add missing QSequentialIterable header

Change-Id: I58693eeeba78be65ff5f112d377480ecd6216a15
Task-number: QTBUG-87002
Reviewed-by: Mike Krus <mike.krus@kdab.com>